crates/ir/tests/ir/snapshots/main__ir__lower__ownership__ctor_auto_own_synthesis.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module ownership__ctor_auto_own_synthesis

struct Conn { sock: ~Socket, name: String }
struct Point { x: Int, y: Int }
type ConnState = Open#0(~Socket) | Closed#1
extern java "net.Socket" close_socket(~Socket) -> Unit
extern type java "net.Socket" Socket
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit

fn mk_conn(v0: ~Socket) -> ~Conn =
  let v1: ~Conn = construct Conn(v0, "foo")
  v1

fn mk_open(v2: ~Socket) -> ~ConnState =
  let v3: ~ConnState = construct ConnState::Open#0(v2)
  v3

fn mk_closed() -> ~ConnState =
  let v4: ~ConnState = construct ConnState::Closed#1()
  v4

fn identity(v5: u11) -> u11 =
  v5

fn mk_via_identity(v6: ~Socket) -> ~Conn =
  let v7: ~Conn = construct Conn(v6, "bar")
  let v8: ~Conn = call identity(v7)
  v8

fn mk_point() -> Point =
  let v9: Point = construct Point(1, 2)
  v9
