crates/ir/tests/ir/snapshots/main__ir__lower__ownership__ctor_position_own_drop_ok.snap
---
source: crates/ir/tests/ir/lower.rs
assertion_line: 75
expression: ir_module.to_string()
---
module ownership__ctor_position_own_drop_ok

type MyList = Cons#0(Int, MyList) | Nil#1
import core/peek/peek as peek(e) -> e
import core/list/last as last(List[r3]) -> Option[r3]
import core/list/sort_by as sort_by(List[w5], (w5) -> l5) -> List[w5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[z7]) -> List[z7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]

fn literals_in_list() -> MyList =
  let v0: ~MyList = construct MyList::Nil#1()
  let v1: ~MyList = construct MyList::Cons#0(3, v0)
  let v2: ~MyList = construct MyList::Cons#0(2, v1)
  let v3: ~MyList = construct MyList::Cons#0(1, v2)
  v3

fn owned_param_in_list(v4: ~Int) -> MyList =
  let v5: ~MyList = construct MyList::Nil#1()
  let v6: ~MyList = v5
  let v7: ~MyList = construct MyList::Cons#0(v4, v6)
  v7
