crates/ir/tests/ir/snapshots/main__ir__lower__ownership__enum_own_constructor.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module ownership__enum_own_constructor

type Option[x10] = Some#0(x10) | None#1
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn f() -> ~Option[Int] =
  let v0: ~Option[Int] = construct Option::Some#0(42)
  v0

fn main() -> Unit =
  let_join v6(v4: Int) =
    let v1: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
    let v5: Unit = call println(v1, v4)
    v5
  in
  let v2: ~Option[Int] = call f()
  switch v2 {
    0 (v3: Int) ->
      jump v6(v3)
    1 ->
      jump v6(0)
  }
