crates/ir/tests/ir/snapshots/main__ir__lower__ownership__extern_lifts_ownership.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module ownership__extern_lifts_ownership

extern java "native.Socket" close_socket(~Socket) -> Unit
extern java "native.Socket" close_map(~ForeignMap[q10, r10]) -> Unit
extern type java "native.Socket" Socket
extern type java "native.ForeignString" ForeignString
extern type java "native.ForeignMap" ForeignMap
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[n10]) -> List[n10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare close_map: (~ForeignMap[q10, r10]) -> Unit
declare close_socket: (~Socket) -> Unit

fn use_socket(v0: ~Socket) -> Unit =
  let v1: Unit = call close_socket(v0)
  v1

fn use_map_with_resource(v2: ~ForeignMap[Int, ~Socket]) -> Unit =
  let v3: Unit = call close_map(v2)
  v3

fn use_map_plain(v4: ForeignMap[Int, String]) -> Unit =
  ()
