crates/ir/tests/ir/snapshots/main__ir__lower__ownership__fn_to_own_fn_coerce.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module ownership__fn_to_own_fn_coerce

import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn call_once(v0: ~() -> String) -> String =
  let v1: String = call_closure v0()
  v1

fn make_fn() -> String =
  "hello"

fn main() -> Unit =
  let v3: () -> String = make_closure(make_fn, [])
  let v4: String = call call_once(v3)
  let v2: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v5: Unit = call println(v2, v4)
  v5
